@@ -73,8 +73,6 @@
 
     NSView *display;
 
-    NSAttributedString *newLineString;
-
 }
 
 + (NSSize)requireSizeWithFont:(NSFont *)font
